# rust-mcp-sdk

./: .gitignore  .release-config.json  .release-manifest.json  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  UPGRADING.md  conformance-baseline.yml  development.md
crates/conformance-client/: Cargo.toml
crates/conformance-server/: Cargo.toml  README.md
crates/conformance-server/src/: handler.rs  main.rs  prompts.rs  resources.rs  tools.rs
crates/rust-mcp-actix/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-actix/examples/: byo-server.rs  hello-world-server.rs
crates/rust-mcp-actix/src/: bridge.rs  error.rs  factory.rs  lib.rs  mount.rs  options.rs  runtime.rs  server.rs
crates/rust-mcp-actix/src/routes/: auth.rs  fallback.rs  health.rs  messages.rs  mod.rs  sse.rs  streamable_http.rs
crates/rust-mcp-actix/tests/: integration_tests.rs  unit.rs
crates/rust-mcp-axum/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-axum/examples/: byo-server.rs  hello-world-server.rs
crates/rust-mcp-axum/src/: error.rs  factory.rs  lib.rs  routes.rs  runtime.rs  server.rs  utils.rs
crates/rust-mcp-axum/src/routes/: auth_routes.rs  fallback_routes.rs  health_check_route.rs  messages_routes.rs  sse_routes.rs  streamable_http_routes.rs
crates/rust-mcp-axum/tests/: integration_tests.rs
crates/rust-mcp-extra/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-extra/examples/: keycloak-auth.rs  scalekit-auth.rs  workos-auth.rs
crates/rust-mcp-extra/examples/common/: handler.rs  mod.rs  tool.rs  utils.rs
crates/rust-mcp-extra/src/: auth_provider.rs  http_adaptors.rs  id_generator.rs  lib.rs  sqlite.rs  token_verifier.rs
crates/rust-mcp-extra/src/auth_provider/: keycloak.rs  scalekit.rs  work_os.rs
crates/rust-mcp-extra/src/id_generator/: nano_id_generator.rs  random_base_62_id_generator.rs  snow_flake_id_generator.rs  time_base_64_id_generator.rs
crates/rust-mcp-extra/src/sqlite/: sqlite_event_store.rs  sqlite_session_store.rs
crates/rust-mcp-extra/src/token_verifier/: generic_token_verifier.rs  jwt_cache.rs
crates/rust-mcp-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-macros/src/: lib.rs  tool.rs  utils.rs
crates/rust-mcp-macros/src/common/: generators.rs  global_parser.rs  icon_dsl.rs  mod.rs
crates/rust-mcp-macros/src/elicit/: generator.rs  parser.rs
crates/rust-mcp-macros/src/resource/: generator.rs  parser.rs
crates/rust-mcp-macros/src/tool/: generator.rs  parser.rs
crates/rust-mcp-macros/tests/: macro_test.rs  test_mcp_elicit.rs  test_mcp_json_schema.rs  test_mcp_resource.rs  test_mcp_tool.rs
crates/rust-mcp-macros/tests/common/: common.rs
crates/rust-mcp-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-sdk/examples/: README.md  hello-world-mcp-server-stdio-core.rs  hello-world-mcp-server-stdio.rs  hello-world-server-streamable-http-core.rs  hello-world-server-streamable-http.rs  mcp-client-with-oauth.rs  mcp-server-oauth-remote.rs  quick-start-client-stdio.rs  quick-start-server-stdio.rs  quick-start-streamable-http.rs  quick_start.rs  quick_start_client_stdio.rs  quick_start_streamable_http.rs  simple-mcp-client-sse-core.rs  simple-mcp-client-sse.rs  simple-mcp-client-stdio-core.rs  simple-mcp-client-stdio.rs  simple-mcp-client-streamable-http-core.rs  simple-mcp-client-streamable-http.rs  streamable_http_healthcheck.rs
crates/rust-mcp-sdk/examples/common/: example_server_handler.rs  example_server_handler_core.rs  inquiry_utils.rs  mcp_observer.rs  mod.rs  server_handler_with_oauth.rs  tools.rs
crates/rust-mcp-sdk/src/: auth.rs  content.rs  error.rs  hyper_servers.rs  lib.rs  mcp_http.rs  mcp_traits.rs  schema.rs  session_store.rs  task_store.rs  utils.rs
crates/rust-mcp-sdk/src/auth/: auth_provider.rs  metadata.rs
crates/rust-mcp-sdk/src/hyper_servers/: app_state.rs  error.rs  hyper_runtime.rs  hyper_server.rs  hyper_server_core.rs  middlewares.rs  routes.rs  server.rs  session_store.rs
crates/rust-mcp-sdk/tests/: auth_client_tests.rs  check_imports.rs  test_client_runtime.rs  test_client_task.rs  test_macros.rs  test_observer.rs  test_protocol_compability.rs  test_protocol_compatibility.rs  test_server_sse.rs  test_server_task.rs  test_streamable_http.rs  test_streamable_http_client.rs  test_streamable_http_server.rs  test_tool_box.rs
crates/rust-mcp-transport/: CHANGELOG.md  Cargo.toml  README.md
crates/rust-mcp-transport/src/: client_sse.rs  client_streamable_http.rs  constants.rs  error.rs  event_store.rs  lib.rs  mcp_stream.rs  message_dispatcher.rs  request_id_gen.rs  schema.rs  sse.rs  stdio.rs  transport.rs  utils.rs
crates/rust-mcp-transport/tests/: check_imports.rs
examples/hello-world-mcp-server/: Cargo.toml  README.md
examples/hello-world-mcp-server-core/: Cargo.toml  README.md
examples/hello-world-mcp-server-core/src/: handler.rs  main.rs
examples/hello-world-mcp-server-stdio-core/: Cargo.toml  README.md
examples/hello-world-mcp-server-stdio-core/src/: handler.rs  main.rs
examples/hello-world-mcp-server/src/: handler.rs  main.rs  tools.rs
examples/hello-world-server-core-sse/: Cargo.toml  README.md
examples/hello-world-server-core-sse/src/: handler.rs  main.rs  tools.rs
examples/hello-world-server-streamable-http/: Cargo.toml  README.md
examples/hello-world-server-streamable-http/src/: handler.rs  main.rs
examples/simple-mcp-client-core-sse/: Cargo.toml  README.md
examples/simple-mcp-client-core-sse/src/: handler.rs  main.rs
examples/simple-mcp-client-sse/: Cargo.toml  README.md
examples/simple-mcp-client-sse-core/: Cargo.toml
examples/simple-mcp-client-sse-core/src/: handler.rs  main.rs
examples/simple-mcp-client-sse/src/: handler.rs  main.rs
examples/simple-mcp-client-stdio/: Cargo.toml  README.md
examples/simple-mcp-client-stdio/src/: main.rs
examples/simple-mcp-client-streamable-http/: Cargo.toml  README.md
examples/simple-mcp-client-streamable-http-core/: Cargo.toml  README.md
examples/simple-mcp-client-streamable-http-core/src/: handler.rs  main.rs
examples/simple-mcp-client-streamable-http/src/: main.rs
(+122 files in other folders)
