[workspace]
resolver = "2"
members = [
    "crates/rust-mcp-macros",
    "crates/rust-mcp-sdk",
    "crates/rust-mcp-transport",
    "crates/rust-mcp-extra",
    "examples/simple-mcp-client-stdio",
    "examples/simple-mcp-client-stdio-core",
    "examples/hello-world-mcp-server-stdio",
    "examples/hello-world-mcp-server-stdio-core",
    "examples/hello-world-server-streamable-http",
    "examples/hello-world-server-streamable-http-core",
    "examples/simple-mcp-client-sse",
    "examples/simple-mcp-client-sse-core",
    "examples/simple-mcp-client-streamable-http",
    "examples/simple-mcp-client-streamable-http-core",

]

[workspace.dependencies]
# Workspace member crates
rust-mcp-transport = { version = "0.6.2", path = "crates/rust-mcp-transport", default-features = false }
rust-mcp-sdk = { path = "crates/rust-mcp-sdk", default-features = false }
rust-mcp-macros = { version = "0.5.2", path = "crates/rust-mcp-macros", default-features = false }
rust-mcp-extra = { version="0.1.0", path = "crates/rust-mcp-extra", default-features = false }

# External crates
rust-mcp-schema = { version = "0.7", default-features = false }


futures = { version = "0.3" }
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0" }
tokio-stream = { version = "0.1" }
uuid = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
base64 = "0.22"
axum = "0.8"
rustls = "0.23"
tokio-rustls = "0.26"
axum-server = { version = "0.7" }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
] }
bytes = "1.10"

# [workspace.dependencies.windows]

[profile.dev]
split-debuginfo = "unpacked"
debug = 0
# split-debuginfo="unpacked"
strip = "debuginfo"
codegen-units = 256

# [profile.dev]
# split-debuginfo = "unpacked"
# debug = "limited"
# codegen-units = 16
# # opt-level = 0


[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.profiling]
# profiler = true
inherits = "release"
debug = true

[profile.release.package]
# zed = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[workspace.metadata.cargo-machete]
ignored = ["bindgen", "cbindgen", "prost_build", "serde"]

[workspace.metadata.typos]
default.extend-ignore-re = ["clonable"]
