[package]
name = "rust-mcp-actix"
version = "0.1.2"
authors = ["Ali Hashemi"]
description = "Actix-web HTTP server integration for rust-mcp-sdk"
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-actix"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "sdk", "actix"]
license = "MIT"
edition = "2021"
rust-version = { workspace = true }

[dependencies]
rust-mcp-sdk = { version = "0.10.0", workspace = true, features = ["server", "streamable-http", "sse", "auth"] }
actix-web = "4"
actix-rt = "2"
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "aws_lc_rs"] }
rustls-pemfile = { version = "2", optional = true }

[features]
ssl = ["actix-web/rustls-0_23", "dep:rustls", "dep:rustls-pemfile"]

[dev-dependencies]
actix-http = "3"
futures-util = "0.3"
tracing-subscriber = { workspace = true }
rust-mcp-schema = { workspace = true }

[lints]
workspace = true
