[package]
name = "rust-mcp-axum"
version = "0.2.2"
authors = ["Ali Hashemi"]
categories = ["web-programming", "asynchronous", "network-programming"]
description = "Axum HTTP server integration for rust-mcp-sdk"
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-axum"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "axum"]
license = "MIT"
edition = "2021"
rust-version = { workspace = true }

[dependencies]
rust-mcp-sdk = { version = "0.10.0", workspace = true, features = ["server", "streamable-http", "sse", "auth"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, features = [] }
rustls = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
tower = "0.5"
serde_json = { workspace = true }
serde = { workspace = true }
http-body-util = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
rust-mcp-sdk = { workspace = true, features = ["server", "streamable-http", "sse", "macros"] }
axum-server = { workspace = true }

[features]
ssl = ["axum-server/tls-rustls", "dep:rustls"]
tls-no-provider = ["axum-server/tls-rustls-no-provider"]

[lints]
workspace = true
