[package]
name = "rust-mcp-extra"
version = "0.1.0"
authors = ["Ali Hashemi"]
categories = ["api-bindings", "development-tools", "asynchronous", "parsing"]
description = "A companion crate to rust-mcp-sdk offering extra implementations of core traits like SessionStore and EventStore, enabling integration with various database backends and third-party platforms such as AWS Lambda for serverless and cloud-native MCP applications."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-extra"
keywords = ["serverless", "mcp-server", "rust-mcp", "cloud", "lambda"]
license = "MIT"
edition = "2024"
exclude = ["assets/", "tests/"]

[dependencies]
base64.workspace = true
nanoid = "0.4.0"
once_cell = "1.21"
rand = {version="0.9.2", features = ["std", "alloc"] }
rand_distr = "0.5.1"
rust-mcp-sdk = { version = "^0.7", default-features = false, features=["server","2025_06_18"] }

[patch.crates-io]
rust-mcp-sdk = { path = "../rust-mcp-sdk", default-features = false, features=["server","2025_06_18"] }

[features]
default = ["nano_id","snowflake_id","random_62_id","time_64_id"]
nano_id = []
snowflake_id = []
random_62_id = []
time_64_id = []

[lints]
workspace = true
