[package]
name = "rust-mcp-extra"
version = "0.2.1"
authors = ["Ali Hashemi"]
categories = ["api-bindings", "development-tools", "asynchronous", "parsing"]
description = "A companion crate to rust-mcp-sdk offering extra implementations of core traits like SessionStore and EventStore, enabling integration with various database backends and third-party platforms such as AWS Lambda for serverless and cloud-native MCP applications."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-extra"
keywords = ["serverless", "mcp-server", "rust-mcp", "cloud", "lambda"]
license = "MIT"
edition = "2021"
rust-version = { workspace = true }
exclude = ["assets/", "tests/"]

[dependencies]
rust-mcp-sdk = {  version = "0.8.1" , path = "../rust-mcp-sdk", default-features = false, features=["server","auth","hyper-server","macros"] }
base64 = {workspace = true, optional=true}
url= {workspace = true, optional=true}
nanoid = {version="0.4", optional=true}
once_cell = {version="1.2", optional=true}
rand = {version="0.9.2", features = ["std", "alloc"] , optional=true}
rand_distr = {version="0.5.1", optional=true}
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
    "json",
    "cookies",
], optional = true }
async-lock = {version="3.4.1", optional=true}
async-trait = {workspace = true, optional=true}
serde = { workspace = true, optional=true }
serde_json = { workspace = true, optional=true }
http = {workspace=true, optional=true }
http-body-util = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
bytes = {workspace=true, optional=true }
tracing = { workspace = true }


[dev-dependencies]
oauth2-test-server = "0.1"
tokio={ workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[features]
default = ["auth","nano_id","snowflake_id","random_62_id","time_64_id"]
nano_id = ["nanoid"]
snowflake_id = ["once_cell"]
random_62_id = ["rand","rand_distr"]
time_64_id = ["base64"]
auth=["url","reqwest","async-lock","async-trait","rust-mcp-sdk/auth","rust-mcp-sdk/hyper-server"
,"rust-mcp-sdk/sse", "serde","serde_json","http","bytes","http-body","http-body-util"]

[lints]
workspace = true
