[package]
name = "rust-mcp-sdk"
version = "0.4.7"
authors = ["Ali Hashemi"]
categories = ["data-structures", "parser-implementations", "parsing"]
description = "An asynchronous SDK and framework for building MCP-Servers and MCP-Clients, leveraging the rust-mcp-schema for type safe MCP Schema Objects."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-sdk"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "sdk"]
license = "MIT"
edition = "2021"
exclude = ["assets/", "tests/"]

[dependencies]
rust-mcp-schema = { workspace = true, default-features = false }
rust-mcp-transport = { workspace = true, default-features = false, optional = true }
rust-mcp-macros = { workspace = true, optional = true, default-features = false }

tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
tokio-stream = { workspace = true, optional = true }
axum-server = { version = "0.7", features = [], optional = true }
tracing.workspace = true

# rustls = { workspace = true, optional = true }
hyper = { version = "1.6.0", optional = true }

[dev-dependencies]
reqwest = { workspace = true, default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
] }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "std",
    "fmt",
] }

[features]
default = [
    "client",
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "2025_03_26",
] # All features enabled by default
server = ["rust-mcp-transport/stdio"] # Server feature
client = ["rust-mcp-transport/stdio", "rust-mcp-transport/sse"] # Client feature
hyper-server = [
    "axum",
    "axum-server",
    "hyper",
    "server",
    "uuid",
    "tokio-stream",
    "rust-mcp-transport/sse",
]
ssl = ["axum-server/tls-rustls"]
macros = ["rust-mcp-macros/sdk"]

# enabled mcp protocol version 2025_03_26
2025_03_26 = [
    "rust-mcp-schema/2025_03_26",
    "rust-mcp-macros/2025_03_26",
    "rust-mcp-transport/2025_03_26",
    "rust-mcp-schema/schema_utils",
]

# enabled mcp protocol version 2024_11_05
2024_11_05 = [
    "rust-mcp-schema/2024_11_05",
    "rust-mcp-macros/2024_11_05",
    "rust-mcp-transport/2024_11_05",
    "rust-mcp-schema/schema_utils",
]

[lints]
workspace = true
