[package]
name = "rust-mcp-sdk"
version = "0.7.2"
authors = ["Ali Hashemi"]
categories = ["data-structures", "parser-implementations", "parsing"]
description = "An asynchronous SDK and framework for building MCP-Servers and MCP-Clients, leveraging the rust-mcp-schema for type safe MCP Schema Objects."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-sdk"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "sdk"]
license = "MIT"
edition = "2021"
exclude = ["assets/", "tests/"]

[dependencies]
rust-mcp-schema = { workspace = true, default-features = false }
rust-mcp-transport = { workspace = true, default-features = false }
rust-mcp-macros = { workspace = true, optional = true, default-features = false }

tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
tokio-stream = { workspace = true, optional = true }
axum-server = { version = "0.7", features = [], optional = true }
tracing.workspace = true
base64.workspace = true
bytes.workspace = true

# rustls = { workspace = true, optional = true }
hyper = { version = "1.6.0", optional = true }
http = { version ="1.3", optional = true }
http-body-util = { version ="0.1", optional = true }
http-body = { version ="1.0", optional = true }

[dev-dependencies]
wiremock = "0.5"
reqwest = { workspace = true, default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
] }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "std",
    "fmt",
] }

[features]
default = [
    "client",
    "server",
    "macros",
    "stdio",
    "sse",
    "streamable-http",
    "hyper-server",
    "ssl",
    "2025_06_18",
] # All features enabled by default

sse = ["rust-mcp-transport/sse","http","http-body","http-body-util"]
streamable-http = ["rust-mcp-transport/streamable-http","http","http-body","http-body-util"]
stdio = ["rust-mcp-transport/stdio"]

server = []                                                               # Server feature
client = []                                                               # Client feature
hyper-server = ["axum", "axum-server", "hyper", "server", "tokio-stream","http","http-body","http-body-util"]
ssl = ["axum-server/tls-rustls"]
tls-no-provider = ["axum-server/tls-rustls-no-provider"]
macros = ["rust-mcp-macros/sdk"]

# enables mcp protocol version 2025-06-18
2025-06-18 = [
    "rust-mcp-schema/2025_06_18",
    "rust-mcp-macros/2025_06_18",
    "rust-mcp-transport/2025_06_18",
    "rust-mcp-schema/schema_utils",
]
# Alias: allow users to use underscores instead of hyphens
2025_06_18 = ["2025-06-18"]

# enables mcp protocol version 2025_03_26
2025-03-26 = [
    "rust-mcp-schema/2025_03_26",
    "rust-mcp-macros/2025_03_26",
    "rust-mcp-transport/2025_03_26",
    "rust-mcp-schema/schema_utils",
]
# Alias: allow users to use underscores instead of hyphens
2025_03_26 = ["2025-03-26"]


# enables mcp protocol version 2024_11_05
2024-11-05 = [
    "rust-mcp-schema/2024_11_05",
    "rust-mcp-macros/2024_11_05",
    "rust-mcp-transport/2024_11_05",
    "rust-mcp-schema/schema_utils",
]
# Alias: allow users to use underscores instead of hyphens
2024_11_05 = ["2024-11-05"]

[lints]
workspace = true

[package.metadata.typos]
default.extend-ignore-re = ["clonable"]
