[package]
name = "rust-mcp-sdk"
version = "0.10.0"
authors = ["Ali Hashemi"]
categories = ["data-structures", "parser-implementations", "parsing"]
description = "An asynchronous SDK and framework for building MCP-Servers and MCP-Clients, leveraging the rust-mcp-schema for type safe MCP Schema Objects."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-sdk"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "sdk"]
license = "MIT"
edition = "2021"
rust-version = { workspace = true }
exclude = ["assets/", "tests/"]

[dependencies]
rust-mcp-schema = { workspace = true, default-features = false }
rust-mcp-transport = { workspace = true, default-features = false }
rust-mcp-macros = { workspace = true, optional = true, default-features = false }

tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
base64.workspace = true
bytes.workspace = true

http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
url = {workspace = true, optional=true, features=["serde"]}
jsonwebtoken = {version="10.1", optional=true, features=["aws_lc_rs"]}
sha2 = { version = "0.10", optional = true }
reqwest = { workspace = true, default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
], optional = true }
time = {version="0.3.0", features = ["formatting", "local-offset"]}

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.23.0"
colored = "3.0.0"
reqwest = {workspace = true, features = [ "json"]}
tokio = { workspace=true, features = ["full", "test-util"] }
mcp-extra={path="../rust-mcp-extra", package = "rust-mcp-extra"}
mcp-axum={path="../rust-mcp-axum", package = "rust-mcp-axum"}
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "std",
    "fmt",
]}

[features]
default = [
    "client",
    "server",
    "auth",
    "macros",
    "stdio",
    "sse",
    "streamable-http",
]

sse = ["rust-mcp-transport/sse","http","http-body","http-body-util","tokio-stream"]
streamable-http = ["rust-mcp-transport/streamable-http","http","http-body","http-body-util","tokio-stream"]
stdio = ["rust-mcp-transport/stdio"]
auth=["url","jsonwebtoken/aws_lc_rs","reqwest","sha2"]

server = []
client = []
macros = ["rust-mcp-macros/sdk"]



[lints]
workspace = true

[package.metadata.typos]
default.extend-ignore-re = ["clonable"]
