[package]
name = "hello-world-mcp-server-core"
version = "0.1.12"
edition = "2021"
publish = false
license = "MIT"


[dependencies]
rust-mcp-sdk = { workspace = true, default-features = false, features = [
    "server",
    "macros",
    "2025_03_26"
] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
