[package]
name = "hello-world-mcp-server"
version = "0.1.28"
edition = "2021"
publish = false
license = "MIT"


[dependencies]
rust-mcp-sdk = { workspace = true, default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "2025_06_18",
] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[lints]
workspace = true
