[package]
name = "hello-world-server-streamable-http"
version = "0.1.34"
edition = "2021"
publish = false
license = "MIT"


[dependencies]
rust-mcp-sdk = { workspace = true, default-features = false, features = [
    "server",
    "macros",
    "streamable-http",
    "sse",
    "hyper-server",
    "2025_06_18",
] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[lints]
workspace = true
