[package]
name = "simple-mcp-client-stdio"
version = "0.1.33"
edition = "2021"
publish = false
license = "MIT"


[dependencies]
rust-mcp-sdk = { workspace = true, default-features = false, features = [
    "client",
    "macros",
    "stdio",
] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
